# ray-tracing-practice

./: CMakeLists.txt  README.md
images/: img-2.07-white-noise-blurred.jpg:Zone.Identifier
src/: AABB.h  Color.h  Interval.h  ONB.h  Perlin.h  Ray.h  RtwImage.h  Vec3.h  accel.h  bounds3d.h  bsdf.cpp  bsdf.h  cameras.cpp  cameras.h  film.cpp  film.h  integrators.cpp  integrators.h  interval.h  lights.h  main.cpp  materials.h  math.cpp  math.h  ray.h  rtw_image.cpp  rtw_image.h  rtweekend.cpp  rtweekend.h  sampling.cpp  sampling.h  shapes.cpp  shapes.h  textures.cpp  textures.h
src/hittable/: BVHNode.h  ConstantMedium.h  HitRecord.h  Hittable.h  HittableList.h  Quad.h  RotateY.h  Sphere.h  Translate.h  shape.h  shape_intersection.h
src/material/: Dielectric.h  DiffuseLight.h  Isotropic.h  Lambertian.h  Material.h  Metal.h  ScatterRecord.h
src/pdf/: CosinePdf.h  HittablePdf.h  MixturePdf.h  PDF.h  SpherePdf.h
src/texture/: CheckerTexture.h  ImageTexture.h  NoiseTexture.h  SolidColor.h  Texture.h
